--- a/src/css/market.css
+++ b/src/css/market.css
@@ -1,16 +1,19 @@
+h1 {
+  text-align: center;
+  font-family: Arial, Helvetica, sans-serif;
+}
 input[type=text], input[type=number] {
   border: 1px solid #ccc;
   border-radius: 4px;
   padding: 3px 2px;
   margin: 10px;
 }
-.input {
-  width: 65%;
-  color: white;
-  background-color: white;
+.elementInput {
+  display: flex;
 }
 .inputName{
   width: 33%;
+  align-self: center;
 }
 input[type=submit] {
   background-color: #ABEBC6;
@@ -30,12 +33,30 @@ input[type=submit] {
   background-color: #D7BDE2;
   border-radius: 10px;
   padding: 10px;
+  border-style: solid;
+}
+.list {
+  background-color: #D7BDE2;
+  border-radius: 10px;
+  padding: 10px;
+  margin-bottom: 40%;
+  border-style: solid;
+}
+.ulTitle {
+  font-weight: bold;
+  font-size: 18px;
 }
 li {
+  list-style-type: none;
   display: flex;
   flex-direction: row;
 }
 li span {
   margin-left: 10px;
   width: 33%;
+}
+.liTotalPrice {
+  margin-top: 10px;
+  font-weight: bold;
+  text-align: right;
 }
